--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.VengaAmipueblo2"
         tools:targetApi="31">
         <activity
+            android:name=".Acercade"
+            android:exported="false" />
+        <activity
             android:name=".Sitios"
             android:exported="false" />
         <activity
